fixed bug z-index header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -367,12 +367,17 @@ body {
   height: 4px !important;
 }
 
+.swiper-pagination {
+  transform: translateY(-25px) !important;
+}
+
 .swiper-pagination-bullet-active {
   width: 16px !important;
   height: 6px !important;
   border-radius: 99999px !important;
   background: #fff !important;
   transform: translateX(2px) !important;
+  transition: all 0.2s ease-in-out !important;
 }
 
 .swiper-button-prev::after {
